task: Se adapto el formulario nuevo-cliente con clase Beneficio

--- a/Rios_Diego_2700_TP8/src/main/resources/templates/nuevo-cliente.html
+++ b/Rios_Diego_2700_TP8/src/main/resources/templates/nuevo-cliente.html
@@ -12,11 +12,40 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-10 mt-4 mb-4">
+				<h1 class="text-center pb-3">Nuevo Cliente</h1>
 				<div class="row d-flex justify-content-center">
 					<div class="col-md-8 border border-2 rounded pb-3">
+						<h2 class="text-center pt-3 pb-3">Beneficios del Cliente</h2>
+						<form th:action="@{/beneficio/agregar}" th:object="${beneficio}"
+							method="GET">
+							<div class="row g-3 align-items-center">
+								<div class="col-4 text-end">
+									<label for="inputIdCompra" class="col-form-label">Beneficios</label>
+								</div>
+								<div class="col-8">
+									<select class="form-select" id="selectProducto">
+										<option selected value="">Seleccione una opción</option>
+										<option th:each="prod : ${productos}" th:text="${prod.nombre}"></option>
+									</select>
+								</div>
+								<div class="text-end">
+									<input class="btn btn-outline-success" type="submit"
+										value="Agregar Beneficio">
+								</div>
+							</div>
+						</form>
+						<div class="container pt-3">
+							<div class="row align-items-center">
+								<div th:each="pro : ${productos}"
+									class="shadow col-6 toast-header border rounded bg-success text-white">
+									<strong th:text="${pro.nombre}" class="me-auto"></strong>
+									<button type="submit" class="btn-close"></button>
+								</div>
+							</div>
+						</div>	
+						<h2 class="text-center pt-3 pb-3">Datos del Cliente</h2>
 						<form th:action="@{/cliente/guardar}" th:object="${cliente}"
 							method="POST">
-							<h1 class="text-center pt-3 pb-3">Nuevo Cliente</h1>
 							<div class="row g-3 align-items-center">
 								<div class="col-4 text-end">
 									<label for="inputId" class="col-form-label">ID Cliente</label>
@@ -38,11 +67,14 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('tipoDocumento')}" th:errors="*{tipoDocumento}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('tipoDocumento')}"
+										th:errors="*{tipoDocumento}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
-									<label for="inputNum" class="col-form-label">Numero Documento</label>
+									<label for="inputNum" class="col-form-label">Numero
+										Documento</label>
 								</div>
 								<div class="col-8">
 									<input type="number" id="inputNum" class="form-control"
@@ -50,9 +82,11 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('nroDocumento')}" th:errors="*{nroDocumento}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('nroDocumento')}"
+										th:errors="*{nroDocumento}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
 									<label for="inputNombre" class="col-form-label">Nombre
 										y Apellido</label>
@@ -63,9 +97,11 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('nombreApellido')}" th:errors="*{nombreApellido}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('nombreApellido')}"
+										th:errors="*{nombreApellido}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
 									<label for="inputEmail" class="col-form-label">Correo
 										Electrónico</label>
@@ -76,9 +112,10 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
 									<label for="inputPassword" class="col-form-label">Contraseña</label>
 								</div>
@@ -88,9 +125,11 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('password')}"
+										th:errors="*{password}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
 									<label for="inputFechaNac" class="col-form-label">Fecha
 										de Nacimiento</label>
@@ -101,9 +140,11 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('fechaNacimiento')}"
+										th:errors="*{fechaNacimiento}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
 									<label for="inputCodArea" class="col-form-label">Código
 										de Area</label>
@@ -114,9 +155,11 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('codigoAreaTelefono')}" th:errors="*{codigoAreaTelefono}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('codigoAreaTelefono')}"
+										th:errors="*{codigoAreaTelefono}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
 									<label for="inputNroTelefono" class="col-form-label">Número
 										de Teléfono</label>
@@ -127,9 +170,11 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('nroTelefono')}" th:errors="*{nroTelefono}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('nroTelefono')}"
+										th:errors="*{nroTelefono}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
 									<label for="inputFechaUltCompre" class="col-form-label">Fecha
 										Última Compra</label>
@@ -140,60 +185,74 @@
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('fechaUltimaCompra')}" th:errors="*{fechaUltimaCompra}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('fechaUltimaCompra')}"
+										th:errors="*{fechaUltimaCompra}"></div>
 								</div>
 							</div>
-							<h2 class="text-center pt-3 pb-3">Datos de Cuenta</h2>
+							<h2 class="text-center pt-3 pb-3">Datos Cuenta del Cliente</h2>
 							<div class="row g-3 align-items-center">
 								<div class="col-4 text-end">
-									<label for="inputIdCompra" class="col-form-label">ID Cuenta</label>
+									<label for="inputIdCompra" class="col-form-label">ID
+										Cuenta</label>
 								</div>
 								<div class="col-8">
-									<input type="text" id="inputIdCuenta"
-										class="form-control" th:field="*{cuenta.id}" th:readonly="readonly">
+									<input type="text" id="inputIdCuenta" class="form-control"
+										th:field="*{cuenta.id}" th:readonly="readonly">
 								</div>
 								<div class="col-4 text-end">
-									<label for="inputIdCuenta" class="col-form-label">Saldo de Cuenta</label>
+									<label for="inputIdCuenta" class="col-form-label">Saldo
+										de Cuenta</label>
 								</div>
 								<div class="col-8">
-									<input type="number" id="inputSaldo"
-										class="form-control" th:field="*{cuenta.saldo}">
+									<input type="number" id="inputSaldo" class="form-control"
+										th:field="*{cuenta.saldo}">
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('cuenta.saldo')}" th:errors="*{cuenta.saldo}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('cuenta.saldo')}"
+										th:errors="*{cuenta.saldo}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
-									<label for="inputFechaCrea" class="col-form-label">Fecha de Creación</label>
+									<label for="inputFechaCrea" class="col-form-label">Fecha
+										de Creación</label>
 								</div>
 								<div class="col-8">
-									<input type="date" id="inputFechaCrea"
-										class="form-control" th:field="*{cuenta.fechaCreacion}">
+									<input type="date" id="inputFechaCrea" class="form-control"
+										th:field="*{cuenta.fechaCreacion}">
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('cuenta.fechaCreacion')}" th:errors="*{cuenta.fechaCreacion}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('cuenta.fechaCreacion')}"
+										th:errors="*{cuenta.fechaCreacion}"></div>
 								</div>
-								
+
 								<div class="col-4 text-end">
-									<label for="inputIdCompra" class="col-form-label">Estado de Cuenta</label>
+									<label for="inputIdCompra" class="col-form-label">Estado
+										de Cuenta</label>
 								</div>
 								<div class="col-8">
-									<select class="form-select" id="estadoCuenta" th:field="*{cuenta.estado}">
-							     		<option selected value="">Seleccione una opción</option>
+									<select class="form-select" id="estadoCuenta"
+										th:field="*{cuenta.estado}">
+										<option selected value="">Seleccione una opción</option>
 										<option value="activa">Activa</option>
 										<option value="inactiva">Inactiva</option>
-							     	</select>
+									</select>
 								</div>
 								<!-- Mensaje Validador -->
 								<div class="row justify-content-end">
-									<div class="col-8 form-text text-danger" th:if="${#fields.hasErrors('cuenta.estado')}" th:errors="*{cuenta.estado}"></div>
+									<div class="col-8 form-text text-danger"
+										th:if="${#fields.hasErrors('cuenta.estado')}"
+										th:errors="*{cuenta.estado}"></div>
 								</div>
 							</div>
 							<div class="d-grid gap-2 mt-3">
-								<input class="btn btn-outline-success" type="submit" id="liveToastBtn" value="Guardar">
-								<input class="btn btn-outline-danger" type="reset" value="Cancelar">
+								<input class="btn btn-outline-success" type="submit"
+									id="liveToastBtn" value="Guardar"> <input
+									class="btn btn-outline-danger" type="reset" value="Cancelar">
 							</div>
 						</form>
 					</div>
