--- a/Rios_Diego_2700_TP8/src/main/resources/templates/table-clientes.html
+++ b/Rios_Diego_2700_TP8/src/main/resources/templates/table-clientes.html
@@ -13,7 +13,8 @@
 		<div class="row">
 			<div class="col-md-12 mt-4 mb-4">
 			<h1 class="text-center pt-3 pb-3">Listado de Clientes</h1>
-				<table class="table table-sm table-bordered text-center">
+			<div class="table-responsive">
+				<table class="table table-sm table-bordered text-center lh-1 form-text align-middle">
 				<thead>
 					<tr>
 						<th>Tipo de Documento</th>
@@ -25,7 +26,7 @@
 						<th>Última Compra</th>
 						<th>Edad</th>
 						<th>Teléfono</th>
-						<th>Datos Adicionales</th>
+						<th>Beneficios</th>
 						<th>Acciones</th>
 					</tr>
 				</thead>
@@ -41,9 +42,10 @@
 						<td th:text="${cliente.edad}"></td>
 						<td th:text="${cliente.codigoAreaTelefono}+'-'+${cliente.nroTelefono}"></td>
 						<td>
-						<ul>
-						  <li th:text="${cliente.getTiempoUltimaCompra()}"></li>
-						  <!--<li th:text="${cliente.getTiempoFechaNacimiento()}"></li>
+						<ul th:each="b : ${cliente.beneficios}">
+							<li th:text="${b.descripcion}"></li>
+						  <!--<li th:text="${cliente.getTiempoUltimaCompra()}"></li>
+						  <li th:text="${cliente.getTiempoFechaNacimiento()}"></li>
 						  <li th:text="${cliente.getTiempoHastaCumpleanos()}"></li>-->
 						</ul>
 						</td>
@@ -56,6 +58,7 @@
 					</tr>
 				</tbody>
 			</table>
+			</div>
 			</div>			
 		</div>
 	</div>
