task: Trabajo Finalizado - se agrego dependencias para usar iconos

--- a/Rios_Diego_2700_TP8/src/main/resources/templates/layout/head.html
+++ b/Rios_Diego_2700_TP8/src/main/resources/templates/layout/head.html
@@ -3,6 +3,7 @@
 	<div id="head" th:fragment="myhead">
 		<!-- Bootstrap CSS -->
 		<link th:href="@{/webjars/bootstrap/5.0.0-beta3/css/bootstrap.min.css}" rel="stylesheet">
+		<link th:href="@{/webjars/bootstrap-icons/1.5.0/font/bootstrap-icons.css}" rel="stylesheet">
 	</div>
 </body>
 </html>
