--- a/Rios_Diego_2700_TP8/src/main/resources/templates/layout/header.html
+++ b/Rios_Diego_2700_TP8/src/main/resources/templates/layout/header.html
@@ -11,7 +11,7 @@
 		</div>
 		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #EB130E;">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="/home">Bienvenidos</a>
+				<a class="navbar-brand" href="/home"><i class="bi bi-github"></i> GitHub</a>
 				<button class="navbar-toggler" type="button"
 					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 					aria-controls="navbarSupportedContent" aria-expanded="false"
